<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Moodle</string>
    <string name="action_settings">Settings</string>
    <string name="button_send">Send</string>
    <string name="edit_message">Enter a message</string>
    <string name="title_activity_vxc">MainActivity</string>
    <string name="home">You are logged as </string>
    <string name="title_activity_display_message">My Message</string>
    <string name="login_moodle_hdr">Welcome to Moodle!</string>
    <string name="login_moodle_desc">Login</string>
    <string name="login_button">Login</string>
    <string name="user_name">User Name</string>
    <string name="password">Password</string>
    <string name="password_forgotten">Forgotten your password?</string>
    <string name="url">localhost/Moodle/moodle</string>
    <string name="guest_login">Login as a Guest</string>
    <string name="title_activity_user_home">Home</string>
    <string name="title_activity_courses">CoursesActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="courses_hdr">My Courses</string>
    <string name="title_activity_profile">ProfileActivity</string>
    <string name="profile_hdr">My Profile</string>
    <string name="title_activity_course">CourseActivity</string>
    <string name="profile_fullname">Name: </string>
    <string name="profile_address">Address: </string>
    <string name="profile_email">Email address: </string>
    <string name="profile_phones">Contact numbers: </string>
    <string name="profile_city_country">City</string>
    <string name="profile_icq">ICQ: </string>
    <string name="profile_courses">Enrolled courses: </string>
    <string name="default_url">http://10.0.2.2/Moodle/moodle/</string>
    <string name="enter_url">URL</string>
    <string name="title_activity_resource">ResourceActivity</string>
    <string name="home_hdr">Home</string>
    <string name="veiw_proflie">View my profile</string>
    <string name="view_courses">Vies my courses</string>
    <string name="logout">Logout</string>
    <string name="view_profile_settings">Profile settings</string>
    <string name="course_home_hdr">Course</string>
    <string name="resources">Resources</string>
    <string name="assignments">Assignments</string>
    <string name="grades">Grades</string>
    <string name="choices">Choices</string>
    <string name="forum">Forum</string>
    <string name="quizes">Quizzes</string>

</resources>
