<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" android:background="#ffffff" >

    <LinearLayout
        android:id="@+id/hdr_menu_view"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/navbar_shape"
        android:orientation="horizontal"
        android:weightSum="3" >

        <TextView
            android:id="@+id/login_hdr"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="5dp"
            android:text="@string/login_moodle_hdr"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:layout_marginBottom="5dp"
            android:textColor="#ffffff"
            android:gravity="center"
		    android:textStyle="bold" />

        </LinearLayout>

    <TextView
        android:id="@+id/login_details"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/hdr_menu_view"
        android:textSize="20sp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="120dp"
        android:text="@string/login_moodle_desc"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#000000" />

    <!-- <EditText
        android:id="@+id/moodle_url"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/login_details"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:singleLine="true" 
        android:visibility="visible">

        <requestFocus />
    </EditText>  -->

    <EditText
        android:id="@+id/username"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:hint="@string/user_name"
        android:layout_below="@+id/login_details"
        android:textSize="20sp"
        android:layout_marginTop="10dp"
        android:layout_centerHorizontal="true"
        
        android:singleLine="true" />

    <EditText
        android:id="@+id/password"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:layout_below="@+id/username"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:textSize="20sp"
        android:ems="10"
        android:inputType="textPassword"
        android:singleLine="true" />
    
    <LinearLayout
        
        android:id="@+id/login_hint"
        android:layout_below="@+id/password"
        android:layout_width="fill_parent"
        android:textSize="20sp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal" >
    	
    	<TextView
        android:id="@+id/password_forgotten"
        android:layout_weight="1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/password_forgotten"
        android:textSize="20sp"
        android:gravity="center"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#0000ff"	
        android:clickable="true"
        />
    <Button
        android:id="@+id/login_button"
        
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/login_button"
        android:drawablePadding="10dp"
        android:textSize="20sp"
        android:onClick="login"
        
        
        
        android:text="@string/login_button" />
    </LinearLayout>
    <Button
        android:id="@+id/guest_login_button"
        
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login_hint"
        android:text="@string/guest_login"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:textSize="20sp"
        android:onClick="login" />
    </RelativeLayout>
