<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fafafa"
    tools:context=".UserHomeActivity" >

    <LinearLayout
        android:id="@+id/home_hdr_menu_view"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/navbar_shape"
        android:orientation="horizontal"
        android:weightSum="3" >
        
        <TextView
            android:id="@+id/home_hdr"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="5dp"
            android:text="@string/home_hdr"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:layout_marginBottom="5dp"
            android:textColor="#ffffff"
            android:gravity="center"
		    android:textStyle="bold" />
        
    </LinearLayout>
	
	<LinearLayout
	    android:id="@+id/profile_and_courses"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_centerVertical="true"
	    android:orientation="vertical"
	    android:layout_marginLeft="10dp" >

	    <ImageButton
	        android:id="@+id/profile"
	        android:layout_width="60dp"
	        android:layout_height="60dp"
	        android:layout_marginLeft="10dp"
	        android:background="@drawable/button_shape"
	        android:clickable="true"
	        android:contentDescription="@string/veiw_proflie"
	        android:onClick="profileClicked"
	        android:scaleType="fitCenter"
	        android:src="@drawable/profile1" />

	    <ImageButton
	        android:id="@+id/courses"
	        android:layout_width="60dp"
	        android:layout_height="60dp"
	        android:layout_marginLeft="10dp"
	        android:adjustViewBounds="true"
	        android:background="@drawable/button_shape"
	        android:clickable="true"
	        android:contentDescription="@string/view_courses"
	        android:onClick="coursesClicked"
	        android:scaleType="fitCenter"
	        android:src="@drawable/courses2" />
	    
	    <ImageButton
	        android:id="@+id/settings"
	        android:layout_width="60dp"
	        android:layout_height="60dp"
	        android:layout_marginLeft="10dp"
	        android:background="@drawable/button_shape"
	        android:clickable="true"
	        android:contentDescription="@string/view_profile_settings"
	        android:onClick="settingsClicked"
	        android:scaleType="fitCenter"
	        android:src="@drawable/settings" />

	</LinearLayout>

	<LinearLayout
	    android:id="@+id/logged_in_as"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_alignParentRight="true"
	    android:layout_below="@+id/home_hdr_menu_view"
	    android:layout_marginRight="15dp"
	    android:layout_marginTop="15dp" >

	    <TextView
	        android:id="@+id/logged_in"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/home"
	        android:gravity="right" />

	    <TextView
	        android:id="@+id/user_name"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:gravity="right" />
	</LinearLayout>

	<TextView
	    android:id="@+id/ViewProfiletextView"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_alignTop="@+id/profile_and_courses"
	    android:layout_marginLeft="15dp"
	    android:layout_marginTop="25dp"
	    android:layout_toRightOf="@+id/profile_and_courses"
	    android:text="@string/veiw_proflie"
	    android:textAppearance="?android:attr/textAppearanceMedium" />

	<TextView
	    android:id="@+id/ViewCoursesTextView"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_alignLeft="@+id/ViewProfiletextView"
	    android:layout_below="@+id/ViewProfiletextView"
	    android:layout_marginTop="35dp"
	    android:text="@string/view_courses"
	    android:textAppearance="?android:attr/textAppearanceMedium" />

	<TextView
	    android:id="@+id/textView1"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_alignLeft="@+id/ViewCoursesTextView"
	    android:layout_below="@+id/ViewCoursesTextView"
	    android:layout_marginTop="40dp"
	    android:text="@string/view_profile_settings"
	    android:textAppearance="?android:attr/textAppearanceMedium" />

	<TextView
	    android:id="@+id/textView2"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_alignLeft="@+id/profile_and_courses"
	    android:layout_below="@+id/profile_and_courses"
	    android:layout_marginTop="46dp"
	    android:text="@string/logout"
	    android:clickable="true" />

</RelativeLayout>